# dspy-demo

./: .emv.example  .gitignore  Thoughts.md  init_dspy.py  main.py  optimizer.py  package.json  pyproject.toml  simple_qa.py
assets/: dataset.json
custom_lm/: glm_lm.py
gpea_demo/: main.py  script.py  signatures.py
lib/: InterceptedSession.py  Intercepters.py
llms_txt/: main.py  script.py
mcp_demo/: dspy_tools.py  mcp_server.py  script.py
src/assist/: cli.py
src/chat/: agent.py  cli.py
src/draft_article/: draft_article.py
src/gpea_demo/: init_dataset.py  metrics.py  predictions.py  script.py
src/hotboard_assist/: cli.py
src/lib/: dspy_utils.py  utils.py
src/lib/custom_lm/: lms.py
src/llms_txt/: RepoAnalyzer.py  Signatures.py  llms.txt  script.py  utils.py
src/mcp_demo/: script.py
src/mem/: cli.py  memory_tools.py
src/meta_generate/: cli.py  engine.py  generated.json  generator.py  plan_executor.py  schema.py  signatures.py  test.py  utils.py
src/multi_step_agent/: cli.py  modules.py  schemas.py
