[project]
name = "dspy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets<4.0.0",
    "dspy[mcp]>=3.0.4",
    "fastmcp>=2.14.2",
    "requests>=2.32.5",
    "zai-sdk>=0.2.0",
]


[project.scripts]
hotday = "hotboard_assist.cli:run"
planner = "multi_step_agent.cli:run"
